# flask-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Makefile  README.md  environment.yml  pyproject.toml  setup.cfg
{{cookiecutter.project_name}}/app/: __init__.py  config.py
{{cookiecutter.project_name}}/app/api/: __init__.py
{{cookiecutter.project_name}}/app/api/helpers/: tasks.py
{{cookiecutter.project_name}}/app/api/namespaces/: __init__.py  dummy_task.py
{{cookiecutter.project_name}}/app/rq_tasks/: __init__.py  dummy_task.py
{{cookiecutter.project_name}}/deployment/scripts/: start_webserver.sh
