[tool.poetry]
name = "{{cookiecutter.environment_name}}"
version = "0.0.1"
description = "{{cookiecutter.project_description}}"

license = "MIT"

authors = [
    "{{cookiecutter.author}}"
]

readme = "README.md"

keywords = ['packaging', 'poetry']

[tool.poetry.dependencies]
python = "^3.6.9"
flask = "^1.1"
flask-restx = "^0.1.1"
redis = "^3.4.1"
rq = "^1.2.2"
waitress = "^1.4.3"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
black = "^19.10b0"
flake8 = "^3.7"
isort = "^4.3"
pre-commit = "^2.1"
pytest = "^5.3"
pytest-cov = "^2.8"
pytest-testmon = "^1.0"

[tool.poetry.scripts]
my-script = 'my_package:main'
